<resources>
    <string name="app_name">EngToRu</string>
    <string name="enter_password">Введите свой пароль на русском, чтобы посмотреть его в английской раскладке</string>
    <string name="clickbord_title">пароль</string>
    <string name="toast">скопиравано</string>
    <string name="check_caps">Заглавные</string>
    <string name="check_digital">Цифры</string>
    <string name="check_symbols">Спецсимволы</string>
    <string name="button_generate_button">Сгенерировать</string>
    <string name="text_length_generated_help">Ваш пароль будет состоять из 5 символов</string>
    <string name="new_password_generate_text">Сгенерируйте новый пароль ему на замену</string>

    <plurals name="symbol_count">
        <item quantity="one">символ</item>
        <item quantity="two">символа</item>
        <item quantity="few">символа</item>
        <item quantity="many">символов</item>
        <item quantity="other">символов</item>
    </plurals>

    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>

    </string-array>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
    </string-array>

</resources>
